[package]
name = "vesting-treasury"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vesting_treasury"

[features]
cpi = ["no-entrypoint"]
default = []
dev = []
no-entrypoint = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
decimal = { git = "https://github.com/aldrin-exchange/solana-decimal", tag = "0.5.0" }
chrono = { version = "0.4.19", default-features = false }